[package]
name = "abc070"
version = "0.1.0"
authors = ["horyu <28817604+horyu@users.noreply.github.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
proconio = { version = "0.3.6", features = ["derive"] }
itertools = "0.9.0"
petgraph = "0.5.0"

[profile.release]
lto = true
panic = 'abort'
