[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc005"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc005-a = { alias = "a", problem = "https://atcoder.jp/contests/abc005/tasks/abc005_1" }
abc005-b = { alias = "b", problem = "https://atcoder.jp/contests/abc005/tasks/abc005_2" }
abc005-c = { alias = "c", problem = "https://atcoder.jp/contests/abc005/tasks/abc005_3" }
abc005-d = { alias = "d", problem = "https://atcoder.jp/contests/abc005/tasks/abc005_4" }

[[bin]]
name = "abc005-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc005-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc005-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc005-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-integer = "0.1.45"
num-complex = "0.4.2"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
