[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc018"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc018-a = { alias = "a", problem = "https://atcoder.jp/contests/abc018/tasks/abc018_1" }
abc018-b = { alias = "b", problem = "https://atcoder.jp/contests/abc018/tasks/abc018_2" }
abc018-c = { alias = "c", problem = "https://atcoder.jp/contests/abc018/tasks/abc018_3" }
abc018-d = { alias = "d", problem = "https://atcoder.jp/contests/abc018/tasks/abc018_4" }

[[bin]]
name = "abc018-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc018-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc018-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc018-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
