[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc035"
version = "0.1.0"
edition = "2024"

[package.metadata.cargo-compete.bin]
abc035-a = { alias = "a", problem = "https://atcoder.jp/contests/abc035/tasks/abc035_a" }
abc035-b = { alias = "b", problem = "https://atcoder.jp/contests/abc035/tasks/abc035_b" }
abc035-c = { alias = "c", problem = "https://atcoder.jp/contests/abc035/tasks/abc035_c" }
abc035-d = { alias = "d", problem = "https://atcoder.jp/contests/abc035/tasks/abc035_d" }

[[bin]]
name = "abc035-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc035-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc035-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc035-d"
path = "src/bin/d.rs"

[dependencies]
memoise="0.3.2"
counter="0.5.7"
hashbag="0.1.11"
pathfinding="4.2.1"
multimap="0.9.0"
btreemultimap="0.1.1"
num-bigint="0.4.3"
num-complex="0.4.3"
num-integer="0.1.45"
num-traits="0.2.15"
num-derive="0.3.3"
ndarray="0.15.6"
nalgebra="0.32.2"
rand="0.8.5"
petgraph="0.6.3"
indexmap="1.9.3"
regex="1.7.3"
lazy_static="1.4.0"
ordered-float="3.6.0"
itertools="0.10.5"
itertools-num="0.1.3"
permutohedron="0.2.4"
proconio="0.4.3"
text_io="0.1.12"

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
