[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc055"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc055-a = { alias = "a", problem = "https://atcoder.jp/contests/abc055/tasks/abc055_a" }
abc055-b = { alias = "b", problem = "https://atcoder.jp/contests/abc055/tasks/abc055_b" }
abc055-c = { alias = "c", problem = "https://atcoder.jp/contests/abc055/tasks/arc069_a" }
abc055-d = { alias = "d", problem = "https://atcoder.jp/contests/abc055/tasks/arc069_b" }

[[bin]]
name = "abc055-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc055-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc055-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc055-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
