[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc062"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc062-a = { alias = "a", problem = "https://atcoder.jp/contests/abc062/tasks/abc062_a" }
abc062-b = { alias = "b", problem = "https://atcoder.jp/contests/abc062/tasks/abc062_b" }
abc062-c = { alias = "c", problem = "https://atcoder.jp/contests/abc062/tasks/arc074_a" }
abc062-d = { alias = "d", problem = "https://atcoder.jp/contests/abc062/tasks/arc074_b" }

[[bin]]
name = "abc062-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc062-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc062-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc062-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
ndarray = "0.15.6"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
