[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc071"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc071-a = { alias = "a", problem = "https://atcoder.jp/contests/abc071/tasks/abc071_a" }
abc071-b = { alias = "b", problem = "https://atcoder.jp/contests/abc071/tasks/abc071_b" }
abc071-c = { alias = "c", problem = "https://atcoder.jp/contests/abc071/tasks/arc081_a" }
abc071-d = { alias = "d", problem = "https://atcoder.jp/contests/abc071/tasks/arc081_b" }

[[bin]]
name = "abc071-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc071-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc071-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc071-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-integer = "0.1.45"
num-complex = "0.4.2"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
