[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc078"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc078-a = { alias = "a", problem = "https://atcoder.jp/contests/abc078/tasks/abc078_a" }
abc078-b = { alias = "b", problem = "https://atcoder.jp/contests/abc078/tasks/abc078_b" }
abc078-c = { alias = "c", problem = "https://atcoder.jp/contests/abc078/tasks/arc085_a" }
abc078-d = { alias = "d", problem = "https://atcoder.jp/contests/abc078/tasks/arc085_b" }

[[bin]]
name = "abc078-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc078-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc078-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc078-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
