[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc084"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc084-a = { alias = "a", problem = "https://atcoder.jp/contests/abc084/tasks/abc084_a" }
abc084-b = { alias = "b", problem = "https://atcoder.jp/contests/abc084/tasks/abc084_b" }
abc084-c = { alias = "c", problem = "https://atcoder.jp/contests/abc084/tasks/abc084_c" }
abc084-d = { alias = "d", problem = "https://atcoder.jp/contests/abc084/tasks/abc084_d" }

[[bin]]
name = "abc084-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc084-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc084-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc084-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
ndarray = "0.15.6"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
