[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc087"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc087-a = { alias = "a", problem = "https://atcoder.jp/contests/abc087/tasks/abc087_a" }
abc087-b = { alias = "b", problem = "https://atcoder.jp/contests/abc087/tasks/abc087_b" }
abc087-c = { alias = "c", problem = "https://atcoder.jp/contests/abc087/tasks/arc090_a" }
abc087-d = { alias = "d", problem = "https://atcoder.jp/contests/abc087/tasks/arc090_b" }

[[bin]]
name = "abc087-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc087-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc087-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc087-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
ndarray = "0.15.6"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
