[profile.dev]
opt-level = 3

[profile.release]
strip = true

[package]
name = "abc097"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc097-a = { alias = "a", problem = "https://atcoder.jp/contests/abc097/tasks/abc097_a" }
abc097-b = { alias = "b", problem = "https://atcoder.jp/contests/abc097/tasks/abc097_b" }
abc097-c = { alias = "c", problem = "https://atcoder.jp/contests/abc097/tasks/arc097_a" }
abc097-d = { alias = "d", problem = "https://atcoder.jp/contests/abc097/tasks/arc097_b" }

[[bin]]
name = "abc097-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc097-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc097-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc097-d"
path = "src/bin/d.rs"

[dependencies]
itertools = "0.10.3"
itertools-num = "0.1.3"
ndarray = "0.15.6"
num-integer = "0.1.45"
num-complex = "0.4.2"
num-bigint = "0.4.3"
num-traits = "0.2.15"
petgraph = "0.6.2"
proconio = { version = "0.3.7", features = ["derive"] }

ac-library-rs = { git = "https://github.com/rust-lang-ja/ac-library-rs" }

[dev-dependencies]
